# lmstudio-python

./: .gitmodules  CONTRIBUTING.md  README.md  ci-bootstrap-requirements.txt  ci-constraints.txt  lock_dev_venv.sh  pyproject.toml  tox.ini
.github/actions/docker-daemon-run/: action.yml
.github/workflows/: cla.yml  publish.yml  scan-workflows.yml  test.yml
examples/: chatbot.py  speculative-decoding.py  structured-response.py  terminal-sim.py  tool-use-multiple.py  tool-use.py
examples/plugins/dice-tool/: README.md  manifest.json
examples/plugins/dice-tool/src/: plugin.py
examples/plugins/prompt-prefix/: README.md  manifest.json
examples/plugins/prompt-prefix/src/: plugin.py
examples/plugins/wikipedia/: README.md  manifest.json
examples/plugins/wikipedia/src/: plugin.py
lmsjs-schema/: README.md  sync-lmsjs-schema.py
misc/: atexit-example.py  open_client.py  tag-release.sh  update-sdk-schema.sh
sdk-schema/: README.md  lms-with-inferred-unions.json  lms.json  sync-sdk-schema.py
sdk-schema/_templates/: msgspec.jinja2
src/lmstudio/: __init__.py  _kv_config.py  _ws_impl.py  _ws_thread.py  async_api.py  history.py  json_api.py  schemas.py  sync_api.py
src/lmstudio/_lmsjs_models/: README.md  __init__.py
src/lmstudio/_sdk_models/: README.md  __init__.py
src/lmstudio/plugin/: __init__.py  _api_client.py  _dev_client.py  _dev_runner.py  cli.py  config_schemas.py  runner.py  sdk_api.py
src/lmstudio/plugin/hooks/: __init__.py  common.py  prompt_preprocessor.py  prompt_processor.py  token_generator.py  tools_provider.py
tests/: async2sync.py  conftest.py  load_models.py  test_basics.py  test_convenience_api.py  test_default_values.py  test_history.py  test_inference.py  test_kv_config.py  test_logging.py  test_plugin_examples.py  test_schemas.py  test_session_errors.py  test_sessions.py  test_timeouts.py  test_traceback_filtering.py  unload_models.py
tests/async/: test_embedding_async.py  test_images_async.py  test_inference_async.py  test_llm_async.py  test_model_catalog_async.py  test_model_handles_async.py  test_repository_async.py
tests/support/: __init__.py
tests/sync/: test_embedding_sync.py  test_images_sync.py  test_inference_sync.py  test_llm_sync.py  test_model_catalog_sync.py  test_model_handles_sync.py  test_repository_sync.py
